Fix spacing css warnings

--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ body {
   padding: 24px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .card-image {
